[package]
name = "alesia_client"
version = "0.1.0"
rust-version = "1.75.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
bb8 = "0.8.3"
chrono = "0.4.35"
rusqlite = {version ="0.31.0", features = ["chrono"]}
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"

[dev-dependencies]
rusqlite = {version = "0.31.0", features = ["bundled"]}

